# bank-statement-import

./: .copier-answers.yml  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pre-commit-config.yaml.rej  .travis.yml  README.md  README.rst  account_bank_statement_import_1c.py  account_bank_statement_import_camt_oca  oca_dependencies.txt  requirements.txt  test-requirements.txt
account_bank_provider/: README.rst  __manifest__.py
account_bank_provider_ponto/: README.rst  __manifest__.py
account_bank_provider_qonto/: README.rst  __manifest__.py
account_bank_statement_clear_partner/: README.rst  __manifest__.py
account_bank_statement_clearing_account/: README.rst  __manifest__.py  __openerp__.py
account_bank_statement_import/: README.rst  __init__.py  __openerp__.py  account_bank_statement_import.py  account_bank_statement_import_view.xml  parserlib.py  res_partner_bank.py
account_bank_statement_import_1c/: README.rst  __init__.py  __openerp__.py  account_bank_statement_import_1c.py
account_bank_statement_import_adyen/: README.rst  __manifest__.py  __openerp__.py
account_bank_statement_import_auto_reconcile/: README.rst  __manifest__.py  __openerp__.py
account_bank_statement_import_base/: README.rst  __manifest__.py
account_bank_statement_import_batch/: README.rst  __init__.py  __openerp__.py
account_bank_statement_import_be_bpost/: README.rst  __init__.py  __openerp__.py  account_bank_statement_import_be_bpost.py
account_bank_statement_import_bypass_check/: README.rst  __manifest__.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+1862 files in other folders)
